--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   awesome_bottom_bar: ^1.2.4
   flutter_screenutil: ^5.9.0
   animation_wrappers: ^3.0.0
+  i18n_extension: ^10.0.1
 
 dev_dependencies:
   flutter_test:
