--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,10 @@ flutter:
   assets:
     - assets/images/
     # - images/a_dot_ham.jpeg
+flutter_assets:
+  assets_path: assets/images/
+  output_path: lib/core/constants/
+  filename: assets.dart
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
