--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,13 +43,15 @@ dependencies:
   google_fonts: ^6.1.0
   dio: ^5.4.0
   smooth_page_indicator: ^1.1.0
+  photo_view: ^0.14.0
   cached_network_image: ^3.3.1
   flutter_widget_from_html_core: ^0.14.11
   feather_icons: ^1.2.0
   awesome_bottom_bar: ^1.2.4
   flutter_screenutil: ^5.9.0
   animation_wrappers: ^3.0.0
-  i18n_extension: ^10.0.1
+
+  flutter_quill: ^7.1.19
 
 dev_dependencies:
   flutter_test:
